pkg/objects/Documento__c.object
<CustomObject>
    <fields>
        <fullName>Descricao_do_Arquivo__c</fullName>
        <label>Descrição do Arquivo</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelPicklist__c</fullName>
        <formula>Name</formula>
        <label>LabelPicklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projeto__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Projeto relacionado ao arquivo.</description>
        <label>Projeto</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Documentos</relationshipLabel>
        <relationshipName>Documentos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Documento</label>
    <nameField>
        <label>Nome do Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>